# approx-rand-test

./: .travis.yml  README.md  approx-rand-test.cabal
debian/: approx-rand-test.examples  changelog  control  copyright  rules
examples/: fluency.scores  ngram.scores  reversible.scores
src/: approx-rand-test.hs
src/Statistics/Test/: ApproxRand.hs  Correction.hs
tests/: tests.hs
utils/: ChartHistogram.hs  Histogram.hs  SampleIO.hs  TextHistogram.hs  approx-rand-test-paired.hs  approx-rand-test.hs
utils/cairo/: CairoHistogram.hs  ChartBackend.hs
utils/diagrams/: ChartBackend.hs
utils/nocairo/: CairoHistogram.hs
