Name:          approx-rand-test
Version:       0.0.2
License:       OtherLicense
License-file:  LICENSE
Copyright:     Copyright 2012 Daniël de Kok
Author:        Daniël de Kok <me@danieldk.eu>
Maintainer:    Daniël de Kok <me@danieldk.eu>
Homepage:      http://github.com/danieldk/approx-rand-test
Category:      Statistics
Synopsis:      Approximate randomization test
Description:   Utility to perform approximate randomization tests.
Cabal-Version: >= 1.2
Build-Type:    Simple

Library
  HS-Source-Dirs:  src
  Ghc-Options:     -O2 -Wall
  Exposed-modules: Statistics.Test.ApproxRand
  Build-Depends:   statistics == 0.10.1.*


Executable approx_rand_test
  main-is:       approx-rand-test.hs
  HS-Source-Dirs:  src
  Ghc-Options:   -O2 -Wall
  Build-Depends: base >= 4 && < 5, conduit == 0.2.* && < 0.3,
                 MonadRandom >= 0.1.6 && < 0.2, text == 0.11.1.*,
                 vector == 0.9.*, mersenne-random-pure64 == 0.2.0.*,
                 monad-mersenne-random == 0.1
